# CCalc

./: CMakeLists.txt  LICENSE  Makefile  README.md  compile.cmd  compile.sh  cygwin-compile.sh  install.sh  linux-compile.sh  linux-install.sh  windows-compile.cmd
calc/: main.cpp
include/: everything.h  liblog.hpp  libmath.hpp  log.hpp  math.hpp  vector.hpp
liblog/: liblog.cpp  liblog.hpp
libmath/: libmath.cpp  libmath.hpp
src/: liblog.cpp  liblog.hpp  libmath.cpp  main.cpp  test.cpp
